grammar.js
        source_file: $ => repeat($._statement),

        _statement: $ =>
            seq(
                choice(
                    $.alter_keyspace,
                    $.alter_materialized_view,
                    $.alter_role,
                    $.alter_table,
                    $.alter_type,
                    $.alter_user,
                    $.apply_batch,
                    $.create_aggregate,
                    $.create_function,
                    $.create_index,
                    $.create_keyspace,
                    $.create_materialized_view,
                    $.create_role,
                    $.create_table,
                    $.create_trigger,
                    $.create_type,
                    $.create_user,
                    $.delete_statement,
                    $.drop_aggregate,
                    $.drop_function,
                    $.drop_index,
                    $.drop_keyspace,
                    $.drop_materialized_view,
                    $.drop_role,
                    $.drop_table,
                    $.drop_trigger,
                    $.drop_type,
                    $.drop_user,
                    $.grant,
                    $.insert_statement,
                    $.list_permissions,
                    $.list_roles,
                    $.revoke,
                    $.select_statement,
                    $.truncate,
                    $.update,
                    $.use,
                ),
                optional(";"),
            ),

        select_statement: $ =>
            seq(
                kw("SELECT"),
                optional( kw("DISTINCT")),
                optional( kw("JSON") ),
                $.select_elements,
                $.from_spec,
                optional($.where_spec),
                optional($.order_spec),
                optional($.limit_spec ),
                optional(seq( kw("ALLOW"), kw("FILTERING"))),
            ),
        limit_spec: $ => seq( kw("LIMIT"),$.decimal_literal),
        select_elements: $ =>
            seq(
            choice( star, $.select_element),
            repeat(seq(",", $.select_element)),
            ),
        select_element: $ =>
            choice(
                seq(
                    $.object_name,
                    dot,
                    star
                ),
                seq(
                    choice( $.object_name, $.function_call),
                    optional( seq( kw("AS"), $.object_name )),
                ),
            ),
        function_call: $ =>
            seq(
                alias( $.object_name, "function_name"),
                "(",
                choice(
                    star,
                    $.function_args,
                ),
                ")",
            ),
        function_args: $ =>
            commaSep1(choice(
                $.constant,
                $.object_name,
                $.function_call,
            )),
        constant: $ =>
            choice(
                $.decimal_literal,
                $.float_literal,
                $.hexadecimal_literal,
                $.boolean_literal,
                $.code_block,
                kw("NULL"),
                $._string_literal,
                $.uuid,
            ),
        _string_literal: $ => token(string_str),
        from_spec : $ => seq( kw("FROM"),
            dotted_name( $.object_name, $.object_name, "table" )),
        where_spec : $ => seq( kw("WHERE"), $.relation_elements),
        relation_elements : $ => prec.left(PREC.and,sep1( $.relation_element, kw("AND"))),
        relation_element : $=>
            choice (
                seq(
                    choice(
                        dotted_name( $.object_name, $.object_name, "table" ),
                        $.function_call
                    ),
                    field("operator", choice("<", "<=", "<>", "=", ">", ">=")),
                    $.constant,
                ),
                seq(
                    $.function_call,
                    field("operator", choice("<", "<=", "<>", "=", ">", ">=")),
                    $.function_call,
                ),
                seq(
                    $.object_name,
                    kw("IN"),
                    "(",
                     $.function_args,
                    ")",
                ),
                seq(
                    "(",
                    commaSep1( $.object_name ),
                    ")",
                    kw("IN"),
                    "(",
                    commaSep1($.assignment_tuple),
                    ")",
                ),
                seq(
                    "(",
                    commaSep1( $.object_name ),
                    ")",
                    field("operator", choice("<", "<=", "<>", "=", ">", ">=")),
                    commaSep1($.assignment_tuple),
                ),
                $.relation_contains_key,
                $.relation_contains,
            ),
       assignment_tuple : $ =>
            seq(
                "(",
                $.constant,
                choice (
                    repeat( seq( ",", $.constant)),
                    repeat( seq( ",", $.assignment_tuple)),
                    seq(
                        $.assignment_tuple, repeat( seq(",", $.assignment_tuple))
                    )
                ),
                ")",
            ),
        relation_contains_key : $ => seq( $.object_name, kw("CONTAINS"),kw("KEY"), $.constant),
        relation_contains : $ => seq( $.object_name, kw("CONTAINS"), $.constant),
        order_spec : $ => seq ( kw("ORDER"),kw("BY"), $.order_spec_element),
        assignment_tuple : $ =>
            seq(
                "(",
                $.constant,
                choice(
                    repeat( seq( ",", $.constant)),
                    repeat( seq( ",", $.assignment_tuple)),
                    commaSep1( $.assignment_tuple ),
                ),
                ")",
            ),
        truncate : $ =>
            seq(
                kw("TRUNCATE"),
                optional( kw ("TABLE") ),
                dotted_name( $.object_name, $.object_name, "table"),
            ),
        table_name : $ => dotted_name( $.object_name, $.object_name, "table"),
        revoke : $ =>
            seq(
                kw("REVOKE"),
                $.priviledge,
                kw("ON"),
                $.resource,
                kw("FROM"),
                alias( $.object_name, "role")
            ),
        priviledge : $ =>
            choice(
                seq( kw( "ALL"), optional( kw("PERMISSIONS"))),
                kw( "ALTER"),
                kw( "AUTHORIZE"),
                kw( "DESCRIBE"),
                kw( "EXECUTE"),
                kw( "CREATE"),
                kw( "DROP"),
                kw( "MODIFY"),
                kw( "SELECT"),
            ),
        resource : $ =>
            choice(
                seq( kw( "ALL"),
                    choice(
                        seq(
                            kw("FUNCTIONS"),
                            optional( seq(
                                kw("IN"),kw("KEYSPACE"), alias( $.object_name, "keyspace") )
                            ),
                        ),
                        kw("KEYSPACES"),
                        kw("ROLES"),
                    ),
                ),
                seq( kw("FUNCTION"), dotted_name( $.object_name, $.object_name, "function" )),
                seq( kw("KEYSPACE"), alias( $.object_name, "keyspace")),
                seq( kw("ROLE"), alias( $.object_name, "role") ),
                seq( optional( kw("TABLE")), dotted_name( $.object_name, $.object_name, "table")),
            ),
        list_roles : $ =>
            seq(
                kw("LIST"),
                kw("ROLES"),
                optional( seq( kw("OF"), alias( $.object_name, "role"))),
                optional( kw( "NORECURSIVE")),
            ),
        order_direction : $ => choice( kw( "ASC"), kw("DESC")),
        object_name : $ => token( choice( name_chars, seq(squote, name_chars, squote))),
    },
});

function kw(keyword) {
    if (keyword.toUpperCase() != keyword) {
        throw new Error(`Expected upper case keyword got ${keyword}`);
    }
    const words = keyword.split(" ");
    const regExps = words.map(createCaseInsensitiveRegex);

    if (regExps.length == 1) {
        return alias(regExps[0], keyword);
    } else {
        return alias(seq(...regExps), keyword.replace(/ /g, "_"));
    }
}

function createCaseInsensitiveRegex(word) {
    return new RegExp(
        word
            .split("")
            .map(letter => `[${letter.toLowerCase()}${letter.toUpperCase()}]`)
            .join(""),
    );
}

function commaSep1(rule) {
    return sep1(rule, ",");
}

function sep1(rule, separator) {
    return seq(rule, repeat(seq(separator, rule)));
}

function dotted_name(rule1, rule2, name) {
    return choice(
        seq( alias( rule1, "keyspace"),
            ".", alias(rule2, name)),
        alias( rule2, name ),
    )
}
