test/corpus/listRoles.cql
================================================================================
LIST ROLES;
================================================================================
LIST ROLES;
--------------------------------------------------------------------------------

(source_file
  (list_roles))

================================================================================
LIST ROLES OF manager;
================================================================================
LIST ROLES
OF manager;
--------------------------------------------------------------------------------

(source_file
  (list_roles
    (role)))
