test/corpus/revoke.cql
================================================================================
REVOKE SELECT ON cycling.name FROM manager;
================================================================================
REVOKE SELECT
       ON cycling.name
       FROM manager;
--------------------------------------------------------------------------------

(source_file
  (revoke
    (priviledge)
    (resource)))

================================================================================
REVOKE ALL ON cycling.name FROM manager;
================================================================================
REVOKE ALL PERMISSIONS
       ON cycling.name
       FROM manager;
--------------------------------------------------------------------------------

(source_file
    (revoke
    (priviledge)
    (resource)))

================================================================================
REVOKE ALL PERMISSIONS ON cycling.name FROM manager;
================================================================================
REVOKE ALL PERMISSIONS
       ON cycling.name
       FROM manager;
--------------------------------------------------------------------------------

(source_file
    (revoke
    (priviledge)
    (resource)))

================================================================================
REVOKE ALTER ON ALL ROLES FROM coach;
================================================================================
REVOKE ALTER
ON ALL ROLES
FROM coach;
--------------------------------------------------------------------------------

(source_file
  (revoke
    (priviledge)
    (resource)))
