test/corpus/truncate.cql
================================================================================
TRUNCATE keyspace.table;
================================================================================
TRUNCATE keyspace.table;
--------------------------------------------------------------------------------

(source_file
  (truncate
    (table_name)))

================================================================================
TRUNCATE TABLE keyspace.table;
================================================================================
TRUNCATE TABLE keyspace.table;
--------------------------------------------------------------------------------

(source_file
  (truncate
    (table_name)))

================================================================================
TRUNCATE 'table';
================================================================================
TRUNCATE 'table';
--------------------------------------------------------------------------------

(source_file
  (truncate
    (table_name)))

================================================================================
TRUNCATE TABLE table;
================================================================================
TRUNCATE TABLE table;
--------------------------------------------------------------------------------

(source_file
  (truncate
    (table_name)))
